# bloompilot

./: .gitignore  AGENTS.md  PROJECT_CONTEXT.md  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  vercel.json
.github/workflows/: cron.yml
docs/: current-state.md  next-phase.md  project-overview.md
eval/: README.md  package-lock.json  package.json  run-evaluation.mjs
eval/results/: EVAL_REPORT.md  eval-2026-07-20T16-38-20-224Z_first-pass-with-known-issues.json  latest.json
public/: push-sw.js
public/garden-types/: indoor.avif
services/agent-service/: README.md  pyproject.toml
services/agent-service/app/: __init__.py  graph.py  main.py  models.py
src/: instrumentation-client.ts  instrumentation.ts  sentry.edge.config.ts  sentry.server.config.ts
src/app/: actions.ts  agent-actions.ts  diagnosis-actions.ts  garden-actions.ts  global-error.tsx  globals.css  layout.tsx  observer-actions.ts  page.tsx  reminder-actions.ts
src/components/: brand-mark.tsx
src/lib/: action-feedback.ts  agent-graph.ts  agent-runtime.ts  agent-service.ts  agent-tools.ts  alert-observer.ts  api-handler.ts  api-session.ts  app-config.ts  care-plan-engine.ts  care-planner-react.ts  context-builder.ts  daily-reminder.ts  database.ts  diagnosis.ts  disease-diagnosis.ts  garden-stats.ts  garden-type.ts  garden.ts  location.ts  logger.ts  openai.ts  password-reset.ts  plant-enrichment.ts  plant-intelligence.ts  plant-knowledge-db.ts  plant-knowledge.ts  plant-memory.ts  plant-notes.ts  plantnet.ts  rate-limit.ts  reminder-channels.ts  reminder-window.ts  (+12 more)
(+156 files in other folders)
