[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bloompilot-agent-service"
version = "0.1.0"
description = "External LangGraph orchestration service for BloomPilot."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "langgraph>=0.2.0",
  "pydantic>=2.8.0",
  "uvicorn[standard]>=0.30.0",
]

[tool.setuptools]
packages = ["app"]
